examples/test/testpolicy11700.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11700
  namespace: namespace283
spec:
  podSelector:
    matchLabels:
      key9: value5
      key47: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key37: value33
          key17: value12
      podSelector:
        matchLabels:
          key11: value20
          key4: value45
